spade-tests/src/snapshots/spade_tests__ports_integration__assigning_ports_to_ports_is_disallowed.snap
---
source: spade-tests/src/ports_integration.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Can not create a wire of ports
  ┌─ testinput:1:23
  │
1 │ entity not_allowed(a: &mut (&bool, &bool), b: (&bool, &bool)) -> bool {
  │                       ^^^^^^^^^^^^^^^^^^^
  │                       │    │
  │                       │    This is a port
  │                       This can not be a wire


