spade-tests/src/snapshots/spade_tests__ports_integration__assigning_value_to_wire_causes_error.snap
---
source: spade-tests/src/ports_integration.rs
---
entity x(x: bool) -> &bool {
    x
}


error: Output type mismatch. Expected &bool, got bool
  ┌─ testinput:1:28
  │  
1 │   entity x(x: bool) -> &bool {
  │               ----     ----- &bool type specified here
  │               │         
  │               Type bool inferred here
  │ ╭────────────────────────────^
2 │ │     x
3 │ │ }
  │ ╰─^ Found type bool
  │  
  = note: Expected: &bool
               Got: bool


