spade-tests/src/snapshots/spade_tests__ports_integration__backward_types_can_not_be_put_in_registers.snap
---
source: spade-tests/src/ports_integration.rs
---
entity x(clk: clock, a: &mut bool) -> bool {
    reg(clk) _ = a;
    true
}


error: Ports can not be put in a register
  ┌─ testinput:2:18
  │
2 │     reg(clk) _ = a;
  │                  ^ This is a port
  │
  = &mut bool is a port


